--- a/FreeCRMTest/test-output/old/Default suite/methods-alphabetical.html
+++ b/FreeCRMTest/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="939fd1">  <td>19/09/01 17:04:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.crmLogoImageTest()[pri:2, instance:com.crm.qa.testcases.LoginPageTest@6500df86]">crmLogoImageTest</td> 
-  <td>main@1318822808</td>   <td></td> </tr>
-<tr bgcolor="939fd1">  <td>19/09/01 17:04:56</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.crm.qa.testcases.LoginPageTest@6500df86]">loginPageTitleTest</td> 
-  <td>main@1318822808</td>   <td></td> </tr>
-<tr bgcolor="939fd1">  <td>19/09/01 17:04:56</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.crm.qa.testcases.LoginPageTest@6500df86]">loginTest</td> 
-  <td>main@1318822808</td>   <td></td> </tr>
-<tr bgcolor="939fd1">  <td>19/09/01 17:04:56</td>   <td>-34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@6500df86]">&gt;&gt;setUp</td> 
+<tr bgcolor="939fd1">  <td>19/09/02 18:51:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.crm.qa.testcases.HomePageTest@6500df86]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1318822808</td>   <td></td> </tr>
+<tr bgcolor="939fd1">  <td>19/09/02 18:51:23</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHomePageTItleTest()[pri:0, instance:com.crm.qa.testcases.HomePageTest@6500df86]">verifyHomePageTItleTest</td> 
+  <td>main@1318822808</td>   <td></td> </tr>
 </table>
