--- a/FreeCRMTest/test-output/old/Default suite/methods.html
+++ b/FreeCRMTest/test-output/old/Default suite/methods.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="939fd1">  <td>19/09/02 18:51:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.crm.qa.testcases.HomePageTest@6500df86]">&gt;&gt;setup</td> 
+<tr bgcolor="939fd1">  <td>19/09/03 22:25:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1318822808</td>   <td></td> </tr>
-<tr bgcolor="939fd1">  <td>19/09/02 18:51:23</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHomePageTItleTest()[pri:0, instance:com.crm.qa.testcases.HomePageTest@6500df86]">verifyHomePageTItleTest</td> 
+<tr bgcolor="939fd1">  <td>19/09/03 22:25:39</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsPageLabel()[pri:1, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">verifyContactsPageLabel</td> 
+  <td>main@1318822808</td>   <td></td> </tr>
+<tr bgcolor="939fd1">  <td>19/09/03 22:25:39</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selectContectsTest()[pri:2, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">selectContectsTest</td> 
+  <td>main@1318822808</td>   <td></td> </tr>
+<tr bgcolor="939fd1">  <td>19/09/03 22:25:39</td>   <td>52</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selectMultipleContectsTest()[pri:3, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">selectMultipleContectsTest</td> 
   <td>main@1318822808</td>   <td></td> </tr>
 </table>
